--- a/1.css
+++ b/1.css
@@ -1,11 +1,48 @@
 *{margin:0;padding:0; }
- 
+ /*INDEX*/
+ .index .menu a{
+ 	text-decoration: none;
+ 	color: white;
+ }
+ .nav > li > a:hover, .nav > li > a:focus {\
+ 	background-color:transparent;
+}
+.index{
+	background-image: url("images/background.jpg");
+	width: 100%;
+	height: 720px;
+}
+.index .container h1{
+	padding-top: 50%;
+	color: #4F7583;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 70px;
+}
+.index p{
+	padding-top: 1%;
+	color: #4F7583;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 25px;
+}
+.index .getStarted{
+	margin: 20px 0px;
+	color: white;
+	background-color: #4B889E;
+	padding: 10px 20px;
+	transition: 0.4s;
+}
+.index .getStarted:hover{
+	color: #4B889E;
+	background-color: white;
+	border-color: #4B889E;
+}
+
 /*WHAT IS FLOSAT*/
 h1{
 	text-transform: uppercase;
 	color: #707070;
 	font-family: 'Montserrat', sans-serif;
-	font-size: 25px;
+	font-size: 30px;
  }
  .whatIsFlosat{
  	background-color: #E9E9E9;
@@ -28,10 +65,11 @@ h1{
 }
 .descriptionFeature{
 	font-family: 'Montserrat', sans-serif;
-	font-size: 15px;
+	font-size: 18px;
 	color: #707070;
 }
 .readMore{
+	margin: 50px 0px;
 	color: white;
 	background-color: #4B889E;
 	padding: 10px 20px;
@@ -64,16 +102,181 @@ h1{
 .feature h2,.icon{
 	text-align: center;
 }
-.feature .icon{
+.feature .flowchart .icon{
+	color: white;
 	font-size: 70px;
 	background-color: #E94343;
 	border-radius: 7px 7px 0px 0px;
 	padding: 20px 0px;
 }
-
+.feature .chat .icon{
+	color: white;
+	font-size: 70px;
+	background-color: #318CAE;
+	border-radius: 7px 7px 0px 0px;
+	padding: 20px 0px;
+}
+.feature .agile .icon{
+	color: white;
+	font-size: 70px;
+	background-color: #5AA97F;
+	border-radius: 7px 7px 0px 0px;
+	padding: 20px 0px;
+}
 .feature .border{
 	transition: 0.4s;
 	border-radius: 7px;
 	margin: 10px 20px;
 	box-shadow: 0px 4px 8px gray;
 }
+.feature .flowchart h2{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 30px;
+	padding: 5px 0px;
+	color: #E94343;
+}
+.feature .chat h2{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 30px;
+	padding: 5px 0px;
+	color: #318CAE;
+}
+.feature .agile h2{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 30px;
+	padding: 5px 0px;
+	color: #5AA97F;
+}
+.feature ul{
+	padding: 15px 0px;
+}
+.feature .flowchart li{
+	margin-left: 20%;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 16px;
+	padding-bottom: 7px;
+	color: #E94343;
+}
+.feature .chat li{
+	margin-left: 20%;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 16px;
+	padding-bottom: 7px;
+	color: #318CAE;
+}
+.feature .agile li{
+	margin-left: 20%;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 16px;
+	padding-bottom: 7px;
+	color: #5AA97F;
+}
+
+/*DIGITS*/
+.digits{
+	background-color: #4B889E;
+	padding: 40px 0px;
+}
+.digits .titleDigits h1{
+	text-transform: capitalize;
+	text-align: center;
+	font-size: 35px;
+	color: white;
+}
+.digits .infoDigits h1{
+	font-size: 60px;
+	color: white;
+	text-align: center;
+	padding: 10px 0px 0px 0px;
+}
+.digits .infoDigits p{
+	text-align: center;
+	color: white;
+	font-size: 20px;
+}
+
+/*FOOTER*/
+.footer{
+	padding: 60px 0px;
+	background-image: url("images/footerBackground.jpg");
+	max-width: 100%;
+	height: auto;	
+}
+.footer h1{
+	font-size: 40px;
+	color: #4F7583;
+}
+.footer .slogan{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 20px;
+	color: #4F7583;
+	margin-bottom: 30px;
+}
+.footer .contact{
+	font-family: 'Montserrat', sans-serif;
+	padding-top: 10px;
+	font-size: 18px;
+	color: #707070;
+}
+.footer b{
+	font-size: 16px;
+	color: white;
+	line-height: 35px;
+}
+.footer .iconbox{
+	padding: 0px;
+}
+.footer .icon1{
+	height: 35px;
+	width: 35px;
+	border-radius: 50%;
+	background-color: #5B79B7;
+	border-radius: 50%;
+	float: left;
+	cursor: pointer;
+	padding-left: 11px;
+}
+.footer .icon2{
+	height: 35px;
+	width: 35px;
+	border-radius: 50%;
+	background-color: #5DA9DD;
+	border-radius: 50%;
+	float: left;
+	margin-left: 20px;
+	cursor: pointer;
+	padding-left: 9px;
+}
+.footer .icon3{
+	height: 35px;
+	width: 35px;
+	border-radius: 50%;
+	background-color: #DC473A;
+	border-radius: 50%;
+	float: left;
+	margin-left: 20px;
+	cursor: pointer;
+	padding-left: 9px;
+	margin-bottom: 30px;
+}
+.footer .copyright{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 16px;
+	color: #707070;
+}
+.footer .title{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 20px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	color: #707070;
+}
+.footer li{
+	list-style: none;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 15px;
+	color: #707070;
+	padding-top: 5px;
+}
+
+
