--- a/public/css/1.css
+++ b/public/css/1.css
@@ -26,7 +26,7 @@
     border-color: #337ab7;
 }
 .index{
-	background-image: url("images/background.jpg");
+	background-image: url("../.././images/background.jpg");
 	width: 100%;
 	height: 720px;
 }
@@ -249,7 +249,7 @@ h1{
 /*FOOTER*/
 .footer{
 	padding: 60px 0px;
-	background-image: url("images/footerBackground.jpg");
+	background-image: url("../.././images/footerBackground.jpg");
 	max-width: 100%;
 	height: auto;	
 }
