--- a/public/css/1.css
+++ b/public/css/1.css
@@ -1,10 +1,10 @@
 *{margin:0;padding:0; }
  /*INDEX*/
- .index{
- 	padding-top: 40px;
- }
- .index .menu a{
- 	text-decoration: none;
+.index{
+	padding-top: 40px;
+}
+.index .menu a{
+	text-decoration: none;
  	color: #eee;
  	font-family: 'Montserrat', sans-serif;
 	font-size: 18px;
@@ -330,4 +330,64 @@ h1{
 	padding-top: 5px;
 }
 
+/*MODAL*/
+.modalLogin .modal-content .container-fluid {
+	font-family: "Montserrat", sans-serif;
+	color: white;
+}
+.modalLogin .modal-content{
+	background-image: linear-gradient(-90deg,#326375,#345A6B);
+	border: 1px solid transparent;
+	border-radius: 10px;
+}
+.modalLogin .modal-content .container-fluid .row1 h3{
+	padding-bottom: 10px;
+}
 
+.signup .step{
+	color: white;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 20px;
+	width: 380px;
+	padding: 20px 0px 0px 0px;
+}
+.signup h1{
+	color: white;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 25px;
+}
+.signup .picture{
+	background-color: white;
+	width: 300px;
+	height: 400px;
+	padding: 0px;
+	border-radius: 10px 0px 0px 10px
+}
+.signup .signupForm{
+	margin-left: 2%;
+}
+.signup .signupForm1{
+	width: 400px;
+}
+.signup p{
+	color: white;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 18px;
+	margin-bottom: 7%;
+	margin-left: 2%;
+}
+.signup .btn{
+	background-color: #4EA8B4;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 22px;
+	margin-bottom: 10%;
+}
+.modal-dialog{
+	width: 50%;
+}
+.modal-body{
+	padding: 0px;
+}
+.signup .row{
+	margin: 0px;
+}
