--- a/public/css/account-edit.css
+++ b/public/css/account-edit.css
@@ -136,13 +136,6 @@ a.bg-light:focus, a.bg-light:hover, button.bg-light:focus, button.bg-light:hover
 }
 
 /*CONTENT*/
-.account-box{
-  border: 1px solid #4B889E;
-  height: 500px;
-  width: 100%;
-  border-radius: 10px;
-  margin-top: 7%;
-}
 .cancel{
   background-color: white;
   border: 1px solid #4B889E;
@@ -173,6 +166,9 @@ a.bg-light:focus, a.bg-light:hover, button.bg-light:focus, button.bg-light:hover
   background-color:  #4B889E;
   border: 1px solid white;
   color: white;
+}
+.button{
+  margin-top: 5%;
 }
 /*Scrollbar*/
 /* width */
